src/main/java/mpei/bkm/parsing/lls1/parsers/LLS1Parser.java
// Generated from C:/bmd/bkm-lib/src/grammar\LLS1.g4 by ANTLR 4.6
package mpei.bkm.parsing.lls1.parsers;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LLS1Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, Name=19, Comment=20, Space=21;
	public static final int
		RULE_statements = 0, RULE_c = 1, RULE_l = 2, RULE_p = 3, RULE_statement = 4, 
		RULE_variable = 5, RULE_surrogate = 6;
	public static final String[] ruleNames = {
		"statements", "c", "l", "p", "statement", "variable", "surrogate"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.'", "'NOT'", "':'", "'AND'", "'OR'", "'THAT'", "'THOSE'", "'('", 
		"')'", "'INV'", "'SOME'", "'EACH'", "'ONLY'", "'IMP'", "'EXIST'", "'NULL'", 
		"'ISA'", "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "Name", "Comment", "Space"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LLS1.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LLS1Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(17); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(14);
				statement(0);
				setState(15);
				match(T__0);
				}
				}
				setState(19); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__14) | (1L << T__15) | (1L << Name))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CContext extends ParserRuleContext {
		public CContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c; }
	 
		public CContext() { }
		public void copyFrom(CContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BracketedCContext extends CContext {
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public BracketedCContext(CContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterBracketedC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitBracketedC(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitBracketedC(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AndCContext extends CContext {
		public List<CContext> c() {
			return getRuleContexts(CContext.class);
		}
		public CContext c(int i) {
			return getRuleContext(CContext.class,i);
		}
		public AndCContext(CContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterAndC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitAndC(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitAndC(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OrCContext extends CContext {
		public List<CContext> c() {
			return getRuleContexts(CContext.class);
		}
		public CContext c(int i) {
			return getRuleContext(CContext.class,i);
		}
		public OrCContext(CContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterOrC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitOrC(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitOrC(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotCContext extends CContext {
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public NotCContext(CContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterNotC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitNotC(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitNotC(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConceptVariableCContext extends CContext {
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ConceptVariableCContext(CContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterConceptVariableC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitConceptVariableC(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitConceptVariableC(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NamedCContext extends CContext {
		public TerminalNode Name() { return getToken(LLS1Parser.Name, 0); }
		public NamedCContext(CContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterNamedC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitNamedC(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitNamedC(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ThoseCContext extends CContext {
		public PContext p() {
			return getRuleContext(PContext.class,0);
		}
		public ThoseCContext(CContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterThoseC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitThoseC(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitThoseC(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ThatCContext extends CContext {
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public PContext p() {
			return getRuleContext(PContext.class,0);
		}
		public ThatCContext(CContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterThatC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitThatC(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitThatC(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CContext c() throws RecognitionException {
		return c(0);
	}

	private CContext c(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		CContext _localctx = new CContext(_ctx, _parentState);
		CContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_c, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Name:
				{
				_localctx = new NamedCContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(22);
				match(Name);
				}
				break;
			case T__1:
				{
				_localctx = new NotCContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(23);
				match(T__1);
				setState(24);
				c(7);
				}
				break;
			case T__6:
				{
				_localctx = new ThoseCContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(25);
				match(T__6);
				setState(26);
				p(0);
				}
				break;
			case T__7:
				{
				_localctx = new BracketedCContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(27);
				match(T__7);
				setState(28);
				c(0);
				setState(29);
				match(T__8);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(47);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(45);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new AndCContext(new CContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_c);
						setState(33);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(34);
						match(T__3);
						setState(35);
						c(6);
						}
						break;
					case 2:
						{
						_localctx = new OrCContext(new CContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_c);
						setState(36);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(37);
						match(T__4);
						setState(38);
						c(5);
						}
						break;
					case 3:
						{
						_localctx = new ConceptVariableCContext(new CContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_c);
						setState(39);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(40);
						match(T__2);
						setState(41);
						variable();
						}
						break;
					case 4:
						{
						_localctx = new ThatCContext(new CContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_c);
						setState(42);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(43);
						match(T__5);
						setState(44);
						p(0);
						}
						break;
					}
					} 
				}
				setState(49);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class LContext extends ParserRuleContext {
		public LContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_l; }
	 
		public LContext() { }
		public void copyFrom(LContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NamedLContext extends LContext {
		public TerminalNode Name() { return getToken(LLS1Parser.Name, 0); }
		public NamedLContext(LContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterNamedL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitNamedL(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitNamedL(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BracketedLContext extends LContext {
		public LContext l() {
			return getRuleContext(LContext.class,0);
		}
		public BracketedLContext(LContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterBracketedL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitBracketedL(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitBracketedL(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AndLContext extends LContext {
		public List<LContext> l() {
			return getRuleContexts(LContext.class);
		}
		public LContext l(int i) {
			return getRuleContext(LContext.class,i);
		}
		public AndLContext(LContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterAndL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitAndL(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitAndL(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OrLContext extends LContext {
		public List<LContext> l() {
			return getRuleContexts(LContext.class);
		}
		public LContext l(int i) {
			return getRuleContext(LContext.class,i);
		}
		public OrLContext(LContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterOrL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitOrL(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitOrL(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotLContext extends LContext {
		public LContext l() {
			return getRuleContext(LContext.class,0);
		}
		public NotLContext(LContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterNotL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitNotL(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitNotL(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InvLContext extends LContext {
		public LContext l() {
			return getRuleContext(LContext.class,0);
		}
		public InvLContext(LContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterInvL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitInvL(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitInvL(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LContext l() throws RecognitionException {
		return l(0);
	}

	private LContext l(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LContext _localctx = new LContext(_ctx, _parentState);
		LContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_l, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Name:
				{
				_localctx = new NamedLContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(51);
				match(Name);
				}
				break;
			case T__1:
				{
				_localctx = new NotLContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(52);
				match(T__1);
				setState(53);
				l(5);
				}
				break;
			case T__9:
				{
				_localctx = new InvLContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(54);
				match(T__9);
				setState(55);
				match(T__7);
				setState(56);
				l(0);
				setState(57);
				match(T__8);
				}
				break;
			case T__7:
				{
				_localctx = new BracketedLContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(59);
				match(T__7);
				setState(60);
				l(0);
				setState(61);
				match(T__8);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(73);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(71);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new AndLContext(new LContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_l);
						setState(65);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(66);
						match(T__3);
						setState(67);
						l(5);
						}
						break;
					case 2:
						{
						_localctx = new OrLContext(new LContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_l);
						setState(68);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(69);
						match(T__4);
						setState(70);
						l(4);
						}
						break;
					}
					} 
				}
				setState(75);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class PContext extends ParserRuleContext {
		public PContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p; }
	 
		public PContext() { }
		public void copyFrom(PContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EachPContext extends PContext {
		public LContext l() {
			return getRuleContext(LContext.class,0);
		}
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public EachPContext(PContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterEachP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitEachP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitEachP(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PredicateVariablePContext extends PContext {
		public LContext l() {
			return getRuleContext(LContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public PredicateVariablePContext(PContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterPredicateVariableP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitPredicateVariableP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitPredicateVariableP(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SomePContext extends PContext {
		public LContext l() {
			return getRuleContext(LContext.class,0);
		}
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public SomePContext(PContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterSomeP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitSomeP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitSomeP(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BracketedPContext extends PContext {
		public PContext p() {
			return getRuleContext(PContext.class,0);
		}
		public BracketedPContext(PContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterBracketedP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitBracketedP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitBracketedP(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AndPContext extends PContext {
		public List<PContext> p() {
			return getRuleContexts(PContext.class);
		}
		public PContext p(int i) {
			return getRuleContext(PContext.class,i);
		}
		public AndPContext(PContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterAndP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitAndP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitAndP(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SurrogateVariablePContext extends PContext {
		public LContext l() {
			return getRuleContext(LContext.class,0);
		}
		public SurrogateContext surrogate() {
			return getRuleContext(SurrogateContext.class,0);
		}
		public SurrogateVariablePContext(PContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterSurrogateVariableP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitSurrogateVariableP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitSurrogateVariableP(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OnlyPContext extends PContext {
		public LContext l() {
			return getRuleContext(LContext.class,0);
		}
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public OnlyPContext(PContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterOnlyP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitOnlyP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitOnlyP(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OrPContext extends PContext {
		public List<PContext> p() {
			return getRuleContexts(PContext.class);
		}
		public PContext p(int i) {
			return getRuleContext(PContext.class,i);
		}
		public OrPContext(PContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterOrP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitOrP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitOrP(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotPContext extends PContext {
		public PContext p() {
			return getRuleContext(PContext.class,0);
		}
		public NotPContext(PContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).enterNotP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLS1Listener ) ((LLS1Listener)listener).exitNotP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLS1Visitor ) return ((LLS1Visitor<? extends T>)visitor).visitNotP(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PContext p() throws RecognitionException {
		return p(0);
	}

	private PContext p(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PContext _localctx = new PContext(_ctx, _parentState);
		PContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_p, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
